apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apache
  name: apache
spec:
  type: NodePort
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
