loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-loadbalancer-service
  annotations:
    # Note that the backend talks over HTTP.
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    # TODO: Fill in with the ARN of your certificate.
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:167698347898:certificate/865b8041-3a6c-481b-9702-8b2dc41f6a5e
    # Only run TLS on the port named "https" below.
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    # By default In-tree controller will create a Classic LoadBalancer if you require a NLB uncomment below annotation.
    # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  namespace: apache
spec:
  selector:
    app: apache
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  type: LoadBalancer
