tetris.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
        - name: tetris-container
          image: boomstack/tetris:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  type: NodePort
  selector:
    app: tetris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
