ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tetris
  name: shared-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: eks-reuse-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
    - host: tetris.argocd.dries-argocd-init.internship-2023.axxes.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris
                port:
                  number: 80
